compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__functions__anonymous_function.snap
---
source: compiler-core/src/erlang/tests/functions.rs
expression: "\npub fn main() {\n  fn(wibble) { 1 }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  fn(wibble) { 1 }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> fun((any()) -> integer()).
main() ->
    fun(Wibble) ->
        1
    end.
