compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__functions__anonymous_function_with_shadowing.snap
---
source: compiler-core/src/erlang/tests/functions.rs
expression: "\npub fn main() {\n  let wibble = 1\n  fn(wibble) { 1 }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let wibble = 1
  fn(wibble) { 1 }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> fun((any()) -> integer()).
main() ->
    Wibble = 1,
    fun(Wibble@1) ->
        1
    end.
