compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__functions__call_with_out_of_place_labels.snap
---
source: compiler-core/src/erlang/tests/functions.rs
expression: "\nfn wibble(a a, b b) { 1 }\nfn fun(arg) { panic as \"impure!\" }\n\npub fn main() {\n  wibble(fun(\"evaluated first\"), a: fun(\"evaluated second\"))\n}\n"
---
----- SOURCE CODE

fn wibble(a a, b b) { 1 }
fn fun(arg) { panic as "impure!" }

pub fn main() {
  wibble(fun("evaluated first"), a: fun("evaluated second"))
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec wibble(any(), any()) -> integer().
wibble(A, B) ->
    1.

-file("project/test/my/mod.gleam", 3).
-spec 'fun'(any()) -> any().
'fun'(Arg) ->
    erlang:error(#{gleam_error => panic,
            message => <<"impure!"/utf8>>,
            file => <<?FILEPATH/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"fun"/utf8>>,
            line => 3}).

-file("project/test/my/mod.gleam", 5).
-spec main() -> integer().
main() ->
    begin
        Arg = 'fun'(<<"evaluated first"/utf8>>),
        Arg@1 = 'fun'(<<"evaluated second"/utf8>>),
        wibble(Arg@1, Arg)
    end.
