compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__functions__call_with_out_of_place_labels_does_not_produce_extra_bindings_if_args_are_pure.snap
---
source: compiler-core/src/erlang/tests/functions.rs
expression: "\nfn wibble(a a, b b) { 1 }\nfn fun(arg) { \"pure\" }\n\npub fn main() {\n  wibble(b: fun(\"passed second\"), a: fun(\"passed first\"))\n}\n"
---
----- SOURCE CODE

fn wibble(a a, b b) { 1 }
fn fun(arg) { "pure" }

pub fn main() {
  wibble(b: fun("passed second"), a: fun("passed first"))
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec wibble(any(), any()) -> integer().
wibble(A, B) ->
    1.

-file("project/test/my/mod.gleam", 3).
-spec 'fun'(any()) -> binary().
'fun'(Arg) ->
    <<"pure"/utf8>>.

-file("project/test/my/mod.gleam", 5).
-spec main() -> integer().
main() ->
    wibble('fun'(<<"passed first"/utf8>>), 'fun'(<<"passed second"/utf8>>)).
