compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__functions__function_as_value.snap
---
source: compiler-core/src/erlang/tests/functions.rs
expression: "\nfn other() {\n  Nil\n}\n\npub fn main() {\n  other\n}\n"
---
----- SOURCE CODE

fn other() {
  Nil
}

pub fn main() {
  other
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec other() -> nil.
other() ->
    nil.

-spec main() -> fun(() -> nil).
main() ->
    fun other/0.
