compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__functions__nested_aliased_imported_function_as_value.snap
---
source: compiler-core/src/erlang/tests/functions.rs
expression: "\nimport some/other.{wibble as wobble}\n\npub fn main() {\n  wobble\n}\n"
---
----- SOURCE CODE

import some/other.{wibble as wobble}

pub fn main() {
  wobble
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> fun(() -> nil).
main() ->
    fun some@other:wibble/0.
